--- a/airpulse-chart/templates/service.yaml
+++ b/airpulse-chart/templates/service.yaml
@@ -2,10 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "airpulse-chart.fullname" . }}
+  labels:
+    {{- include "airpulse-chart.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
-      targetPort: 5000
+      targetPort: http
+      protocol: TCP
+      name: http
   selector:
-    app: {{ include "airpulse-chart.name" . }}
+    {{- include "airpulse-chart.selectorLabels" . | nindent 4 }}
