--- a/airpulse-chart/templates/deployment.yaml
+++ b/airpulse-chart/templates/deployment.yaml
@@ -1,11 +1,25 @@
-containers:
-  - name: airpulse
-    image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
-    imagePullPolicy: {{ .Values.image.pullPolicy }}
-    ports:
-      - containerPort: 5000
-    env:
-      - name: AIRPULSE_API_KEY
-        value: ""  # Or use secrets later
-
-
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: {{ include "airpulse-chart.fullname" . }}
+  labels:
+    app.kubernetes.io/name: {{ include "airpulse-chart.name" . }}
+    app.kubernetes.io/instance: {{ .Release.Name }}
+spec:
+  replicas: {{ .Values.replicaCount }}
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: {{ include "airpulse-chart.name" . }}
+      app.kubernetes.io/instance: {{ .Release.Name }}
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: {{ include "airpulse-chart.name" . }}
+        app.kubernetes.io/instance: {{ .Release.Name }}
+    spec:
+      containers:
+        - name: airpulse
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          imagePullPolicy: {{ .Values.image.pullPolicy }}
+          ports:
+            - containerPort: 5000
