--- a/airpulse-chart/values.yaml
+++ b/airpulse-chart/values.yaml
@@ -1,10 +1,14 @@
+replicaCount: 1
+
 image:
-  repository: garvitkulshrestha/airpulse_garvit
+  repository: your-dockerhub-username/airpulse
   tag: latest
   pullPolicy: IfNotPresent
 
 service:
-  type: ClusterIP
+  type: NodePort
   port: 5000
+
+# Your API key for the app
 
 apiKey: "EC0yRS84vbovyvHyVcT8qA==x2gWDQrd1UASutsf"  # replace with your actual API key or manage via ArgoCD secret
