--- a/airpulse-chart/values.yaml
+++ b/airpulse-chart/values.yaml
@@ -9,5 +9,10 @@ service:
   type: NodePort
   port: 5000
 
+image:
+  repository: your-docker-username/airpulse
+  tag: "latest"   # GitHub Actions will replace this line with the commit SHA
+  pullPolicy: Always
+
 
 apiKey: "EC0yRS84vbovyvHyVcT8qA==x2gWDQrd1UASutsf"  # replace with your actual API key or manage via ArgoCD secret
