--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: Build and Push AirPulse Docker Image
+name: Build and Deploy AirPulse Docker Image
 
 on:
   push:
@@ -11,36 +11,42 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # 1️⃣ Checkout the repo
     - name: Checkout code
       uses: actions/checkout@v3
 
+    # 2️⃣ Set up Docker Buildx (for multi-platform builds)
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    # 3️⃣ Login to Docker Hub
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    # 4️⃣ Build Docker image with commit SHA as tag
     - name: Build Docker image
       run: |
         IMAGE="${{ secrets.DOCKER_USERNAME }}/airpulse:${GITHUB_SHA}"
         echo "IMAGE=$IMAGE" >> $GITHUB_ENV
         docker build -t $IMAGE .
 
+    # 5️⃣ Push Docker image to Docker Hub
     - name: Push Docker image
       run: docker push ${{ env.IMAGE }}
 
+    # 6️⃣ Update Helm values.yaml with new image tag
     - name: Update Helm values
       run: |
-        IMAGE_TAG=${GITHUB_SHA}
-        sed -i "s|tag:.*|tag: \"$IMAGE_TAG\"|" ./airpulse-chart/values.yaml
+        sed -i "s|tag:.*|tag: \"${GITHUB_SHA}\"|" ./airpulse-chart/values.yaml
         cat ./airpulse-chart/values.yaml
 
+    # 7️⃣ Deployment Reminder (local)
     - name: Deployment Reminder
       run: |
-        echo "Docker image built and pushed."
-        echo "Run the following locally to deploy:"
+        echo "✅ Docker image built and pushed to Docker Hub."
+        echo "Run the following locally to deploy the new image:"
         echo "  helm upgrade airpulse ./airpulse-chart --install"
         echo "  or sync via ArgoCD UI locally."
