--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,38 +15,41 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
-    # 2️⃣ Set up Docker Buildx (for multi-platform builds)
+    # 2️⃣ Set up Docker Buildx
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
-    # 3️⃣ Login to Docker Hub
+    # 3️⃣ Log in to Docker Hub
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # 4️⃣ Build Docker image with commit SHA as tag
-    - name: Build Docker image
-      run: |
-        IMAGE="${{ secrets.DOCKER_USERNAME }}/airpulse:${GITHUB_SHA}"
-        echo "IMAGE=$IMAGE" >> $GITHUB_ENV
-        docker build -t $IMAGE .
-
-    - name: Push Docker image
-      run: docker push ${{ env.IMAGE }}
-
-    # 6️⃣ Update Helm values.yaml with new image tag
-    - name: Update Helm values
+    # 4️⃣ Set image tag and update Helm values.yaml
+    - name: Set image tag
       run: |
         IMAGE_TAG=${GITHUB_SHA}
+        echo "IMAGE_TAG=$IMAGE_TAG" >> $GITHUB_ENV
         sed -i "s|tag:.*|tag: \"$IMAGE_TAG\"|" ./airpulse-chart/values.yaml
         cat ./airpulse-chart/values.yaml
 
-    # 7️⃣ Deployment Reminder (local)
+    # 5️⃣ Build Docker image
+    - name: Build Docker image
+      run: |
+        IMAGE=pratik514/airpulse:${{ env.IMAGE_TAG }}
+        echo "IMAGE=$IMAGE" >> $GITHUB_ENV
+        docker build -t $IMAGE .
+
+    # 6️⃣ Push Docker image
+    - name: Push Docker image
+      run: docker push ${{ env.IMAGE }}
+
+
+    # 7️⃣ Deployment reminder (local)
     - name: Deployment Reminder
       run: |
         echo "✅ Docker image built and pushed to Docker Hub."
-        echo "Run the following locally to deploy the new image:"
+        echo "Use the following to deploy locally:"
         echo "  helm upgrade airpulse ./airpulse-chart --install"
-        echo "  or sync via ArgoCD UI locally."
+        echo "  or sync via ArgoCD UI."
