--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -62,8 +62,9 @@ jobs:
     - name: Build Docker image
       run: |
         IMAGE=${{ secrets.DOCKER_USERNAME }}/airpulse:${{ env.IMAGE_TAG }}
-        echo "IMAGE=$IMAGE" >> $GITHUB_ENV
+        echo "IMAGE=$IMAGE"
         docker build -t $IMAGE .
+        docker push $IMAGE
 
     # 6️⃣ Push Docker image
     - name: Push Docker image
