--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -26,6 +26,9 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Set image tag
+      run: echo "IMAGE_TAG=${GITHUB_SHA}" >> $GITHUB_ENV
+
     # 4️⃣ Set image tag (commit SHA) and update Helm values.yaml
 
     # D:\Docker Practice\airpulse\HelmChartForAirpulse\airpulse-chart\values.yaml
