--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,66 @@
-name: Build and Deploy AirPulse Docker Image
+# name: Build and Deploy AirPulse Docker Image
+
+# on:
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:
+
+# jobs:
+#   build-and-push:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     # 1️⃣ Checkout the AirPulse application repo
+#     - name: Checkout AirPulse repo
+#       uses: actions/checkout@v3
+
+#     # 2️⃣ Set up Docker Buildx
+#     - name: Set up Docker Buildx
+#       uses: docker/setup-buildx-action@v2
+
+#     # 3️⃣ Log in to Docker Hub
+#     - name: Log in to Docker Hub
+#       uses: docker/login-action@v2
+#       with:
+#         username: ${{ secrets.DOCKER_USERNAME }}
+#         password: ${{ secrets.DOCKER_PASSWORD }}
+
+#     - name: Set image tag
+#       run: echo "IMAGE_TAG=${GITHUB_SHA}" >> $GITHUB_ENV
+
+#     # 4️⃣ Set image tag (commit SHA) and update Helm values.yaml
+
+#     # D:\Docker Practice\airpulse\HelmChartForAirpulse\airpulse-chart\values.yaml
+#     # 5️⃣ Build Docker image
+#     - name: Build Docker image
+#       run: |
+#         IMAGE=${{ secrets.DOCKER_USERNAME }}/airpulse:${{ env.IMAGE_TAG }}
+#         echo "IMAGE=$IMAGE"
+#         docker build -t $IMAGE .
+#         docker push $IMAGE
+
+    
+#     - name: Update Helm chart with new image
+#       env:
+#         HELM_REPO_TOKEN: ${{ secrets.HELM_REPO_TOKEN }}
+#       run: |
+#         # Clone Helm chart repo
+#         git clone https://$HELM_REPO_TOKEN@github.com/PratikTech07/HelmChartForAirpulse.git
+#         cd HelmChartForAirpulse/airpulse-chart
+
+#         # Configure Git user for the commit
+#         git config user.name "PratikTech07"
+#         git config user.email "bharskarpratik2@gmail.com"
+
+#         # Update values.yaml with new Docker image tag
+#         sed -i "s|tag:.*|tag: \"$IMAGE_TAG\"|" values.yaml
+#         git add values.yaml
+#         git commit -m "Update image tag to $IMAGE_TAG"
+#         git push origin main
+   
+
+name: Build, Analyze, and Deploy AirPulse
 
 on:
   push:
@@ -7,57 +69,73 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-push:
+  build-analyze-deploy:
+    name: Build, Analyze, and Deploy
     runs-on: ubuntu-latest
 
     steps:
-    # 1️⃣ Checkout the AirPulse application repo
-    - name: Checkout AirPulse repo
-      uses: actions/checkout@v3
+      # 1️⃣ Checkout repository
+      - name: Checkout AirPulse repo
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Needed for better SonarQube analysis
 
-    # 2️⃣ Set up Docker Buildx
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      # 2️⃣ SonarQube Scan
+      - name: SonarQube Analysis
+        uses: SonarSource/sonarqube-scan-action@v5
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
 
-    # 3️⃣ Log in to Docker Hub
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      # Uncomment below if you want to fail the pipeline on failed Quality Gate
+      # - name: SonarQube Quality Gate Check
+      #   uses: SonarSource/sonarqube-quality-gate-action@v1
+      #   timeout-minutes: 5
+      #   env:
+      #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
-    - name: Set image tag
-      run: echo "IMAGE_TAG=${GITHUB_SHA}" >> $GITHUB_ENV
+      # 3️⃣ Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    # 4️⃣ Set image tag (commit SHA) and update Helm values.yaml
+      # 4️⃣ Log in to Docker Hub
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    # D:\Docker Practice\airpulse\HelmChartForAirpulse\airpulse-chart\values.yaml
-    # 5️⃣ Build Docker image
-    - name: Build Docker image
-      run: |
-        IMAGE=${{ secrets.DOCKER_USERNAME }}/airpulse:${{ env.IMAGE_TAG }}
-        echo "IMAGE=$IMAGE"
-        docker build -t $IMAGE .
-        docker push $IMAGE
+      # 5️⃣ Set image tag based on commit SHA
+      - name: Set image tag
+        run: echo "IMAGE_TAG=${GITHUB_SHA}" >> $GITHUB_ENV
 
-    
-    - name: Update Helm chart with new image
-      env:
-        HELM_REPO_TOKEN: ${{ secrets.HELM_REPO_TOKEN }}
-      run: |
-        # Clone Helm chart repo
-        git clone https://$HELM_REPO_TOKEN@github.com/PratikTech07/HelmChartForAirpulse.git
-        cd HelmChartForAirpulse/airpulse-chart
+      # 6️⃣ Build and Push Docker image
+      - name: Build and Push Docker image
+        run: |
+          IMAGE=${{ secrets.DOCKER_USERNAME }}/airpulse:${{ env.IMAGE_TAG }}
+          echo "IMAGE=$IMAGE"
+          docker build -t $IMAGE .
+          docker push $IMAGE
 
-        # Configure Git user for the commit
-        git config user.name "PratikTech07"
-        git config user.email "bharskarpratik2@gmail.com"
+      # 7️⃣ Update Helm chart repo with new image tag
+      - name: Update Helm chart with new image
+        env:
+          HELM_REPO_TOKEN: ${{ secrets.HELM_REPO_TOKEN }}
+        run: |
+          # Clone Helm chart repo
+          git clone https://$HELM_REPO_TOKEN@github.com/PratikTech07/HelmChartForAirpulse.git
+          cd HelmChartForAirpulse/airpulse-chart
 
-        # Update values.yaml with new Docker image tag
-        sed -i "s|tag:.*|tag: \"$IMAGE_TAG\"|" values.yaml
-        git add values.yaml
-        git commit -m "Update image tag to $IMAGE_TAG"
-        git push origin main
-   
+          # Configure Git user for the commit
+          git config user.name "PratikTech07"
+          git config user.email "bharskarpratik2@gmail.com"
+
+          # Update values.yaml with new Docker image tag
+          sed -i "s|tag:.*|tag: \"${{ env.IMAGE_TAG }}\"|" values.yaml
+
+          git add values.yaml
+          git commit -m "Update image tag to ${{ env.IMAGE_TAG }}"
+          git push origin main
+
 
     
